# pka_site_frontend

./: .eslintrc.json  .gitattributes  .gitignore  .oxlintrc.json  .prettierignore  .prettierrc.json  .stylelintrc.json  .swcrc  AGENTS.md  Dockerfile  README.md  biome.json  bun.lockb  eslint.config.js  index.html  justfile  nginx.conf  oxlintrc.json  package.json  pnpm-lock.yaml  postcss.config.js  postcss.config.mjs  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  webpack.common.js  webpack.dev.js  webpack.prod.js
.github/workflows/: build-test.yml  deploy.yml  main.yml
.husky/: pre-commit
lib_wasm/: Cargo.toml
lib_wasm/src/: lib.rs
public/: index.html  manifest.json
src/: App.css  App.tsx  index.tsx  lib_wasm.ts  main.tsx  queryClient.ts  routeTree.gen.ts  styles.css  tslint.json  types.ts  util.ts  vite-env.d.ts
src/atoms/: playerAtoms.ts  scrollbarAtoms.ts  searchAtoms.ts
src/components/: Button.tsx  DrawerComponent.tsx  DrawerListItem.tsx  EpisodeSearchResult.tsx  EventSearchComponent.tsx  EventSearchResult.tsx  EventSearchResultCard.tsx  LinkButton.tsx  LoadingSpinner.tsx  NavBar.tsx  NavSearch.tsx  PlayerComponent.tsx  PlayerEventCard.tsx  ProgressBar.tsx  RandomEventsListComponent.tsx  RootComponent.tsx  Scrollbar.tsx  SearchComponent.tsx  SearchResultCard.tsx  Spinner.tsx  TabButton.tsx  TimelineCard.tsx  Tooltip.tsx  Watch.tsx  YouTubePlayer.tsx
src/flatbuffers/: all-pka-event-search-results-fb.ts  pka-event-search-result-fb.ts  pka_event_search_results.ts  pka_event_search_results_generated.ts
(+20 files in other folders)
