[package]
name = "lib_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
bitcode = "0.6.0-beta.1"
zstd = { version = "0.13.0", default-features = false }
wasm-bindgen = "0.2"
async-compression = { version = "0.4.6", features = ["futures-io", "zstd"] }
futures = "0.3.30"
wasm-bindgen-futures = "0.4.42"
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
